--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ html{
     justify-content: center;
 }
 
-.header-title{
+.header_title{
   line-height: 36px;
   font-weight:1000;
   font-family:Arial Black;
@@ -62,24 +62,54 @@ html{
   
 }
 
-
-.nav-sublist{
-
+.nav_item {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80%;
+  width: 15%;
+  transition: 0.2s linear;
 }
 
-.nav-list-item:hover{
+
+.nav_sublist{
+  position: absolute;
+  display: none;
+  top: 100%;
+  padding-top: 4px;
+}
+
+.nav_sublist:hover{
+    display: block;
+}
+
+.nav_list_item:hover{
   background-color:  #a787c2;
 }
 
-.nav-list-item:hover .nav-list-item-link{
-
+.nav_item:hover .nav_sublist {
+  display: block;
+  width: 100%;
 }
 
-.nav-list-item:hover .nav-sublist{
-
+.nav_sublist_item {
+  display: flex;
+  justify-content: center;
+  background-color: #f2c5e8;
+  color: #8a5080;
+  padding: 10px 0;
+  border-radius: 0;
+  border-bottom: solid 1px #865388;
+  transition: 0.2s linear;
 }
 
-.nav-list{
+.nav_sublist_item:hover {
+  background-color: #aa2fcf;
+  /* color: #EDF2C5; */
+}
+
+.nav_list{
   width:100%;
   box-shadow: 0 1px 1px 0px;
   background-color: #8d4f96;
@@ -92,15 +122,20 @@ html{
   align-items: center;
 }
 
-.nav-list-item{
-
+.nav_list_item{
+  
   list-style: none;
   transition: 0.3s;
   height: 100%;
 
 }
 
-.nav-list-link{
+.nav_list_item:hover .nav_sublist{
+   display :block;
+
+}
+
+.nav_list_link{
   display: flex;
   align-items: center;
   height: 100%;
