--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,6 @@ html{
 }
 
 .header{
-    border-top: px;
     display: flex;
     justify-content: center;
 }
@@ -150,57 +149,106 @@ html{
 
 .mainpic{
   display:flex;
-  width: auto;
   flex-shrink: 0;
-  padding-top: 200px;
+  padding-top: 150px;
 
 }
-.mainpic img {
-  transform: scale(1);
+
+.row{
+  display: flex;
+  flex-wrap: wrap;
+  
+}
+
+.col{
+  padding-top: 20px;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: calc(100%/2);
+}
+
+.gallery{
+  list-style: none;
+  margin-bottom: 12px;
+  padding: 10px 20px 10px;
+}
+
+.gallery_item-link{
+  position: relative;
+  display: block;
+}
+
+.mainpic img{
+  width: 100%;
+  display: block;
   transition: 0.4s;
-  margin: 0 20px;
-  border-radius: 100%;
+  border-radius: 3%;
 }
 
 .mainpic img:hover {
-  transform: scale(1.1);
+  opacity: 0.8;
   margin: 0 25px; 
 }
 
-.mainpic div{
-  
-  width: auto;
-  height: 40vh;
-
-
+.overlay {
+  box-sizing: border-box;
+  display: none;
+  background: rgba(0, 0, 0, 0.65);
+  color: #d1cbd4;
+  position:absolute;
+  bottom: 0;
+  left: 5px;
+  height: 30%;
+  width: 100%;
+  padding: 10px;
+  margin: 0 20px;
+  pointer-events: none;
+  border-radius: 3.5%;
 }
 
+.overlay:hover {
+  margin: 0 25px;
+}
 
-.mainpic div a img{
-  width: auto;
-  height: 40vh;
+.overlay h2 {
+  font-family: Arial;
+  font-weight: 500;
+  margin: 0;
+  padding: 0;
+}
 
+footer {
+  background: rgba(48, 47, 47, 0.9);
+}
 
+.footer_title {
+  display: flex;
+  justify-content: center;
+  padding-top: 20px auto;
+  margin-left: 20px;
+}
+
+.footer_title h1 {
+  color: rgba(213, 207, 215, 0.8);
 }
 
 .follow{
-
   display:flex;
   padding-left: 30px ;
   padding-top: 50px;
-  justify-content:space-between;
+  margin: 0 100px;
+  justify-content:space-around;
   
 }
 
 .follow a img{
-
 
   transition-property: transform opacity ;
   transition-duration: 0.2s;
   transition-timing-function:ease-out;
   
 
-  opacity: 0.8;
+  opacity: 0.9;
   transform: scale(1);
 
 }
@@ -209,6 +257,6 @@ html{
 
   
   opacity: 1;
-  transform: scale(1.5);
+  transform: scale(1.2);
 
 }
