--- a/css/arknights.css
+++ b/css/arknights.css
@@ -1,3 +1,12 @@
+@keyframes anime {
+  0% {
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+}
+
 html{
     background-image: url('../img2/arknightsbackground.jpg');
     animation-name: anime;
