--- a/css/css2/arknights.css
+++ b/css/css2/arknights.css
@@ -28,18 +28,20 @@ html{
     display: none;
   }
    
+
+
   .intro {
+    border-radius: 10px;
+    background-color: #000000 ; opacity: 75%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding: 0px;
+    margin: 0px 31px;
 } 
 
 .intro h2{
     font-size: 50px;
-    color: rgba(0, 0, 0, 0.9);
+    color: rgba(250, 250, 250, 0.9);
     margin-bottom: 0;
 }
 
@@ -50,6 +52,7 @@ html{
 }
 
   .arkscontainer{
+    border-radius: 10px;
     max-width: 1540px;
     max-height: 1260px;
     margin-right: auto;
@@ -74,6 +77,7 @@ html{
   }
   
   .nav2_list{
+    border-radius: 10px;
     width:100%;
     box-shadow: 0 1px 1px 0px;
     background-color: #202122;
@@ -114,6 +118,7 @@ html{
 
   .nav2_list_item:hover{
     background-color:  #6869b6;
+    border-radius: 10px;
   }
   
   .mainpic2 img{
@@ -176,11 +181,13 @@ html{
   }
 
   .footer{
+    border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: rgb(34, 34, 34);
     height: 100px;
+    margin: 0px 31px;
 }
 
 .footer p{
