--- a/gamewiki/css/css2/arknights.css
+++ b/gamewiki/css/css2/arknights.css
@@ -27,8 +27,32 @@ html{
   
     display: none;
   }
+   
+
+
+  .intro {
+    border-radius: 10px;
+    background-color: #000000 ; opacity: 75%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0px 31px;
+} 
+
+.intro h2{
+    font-size: 50px;
+    color: rgba(250, 250, 250, 0.9);
+    margin-bottom: 0;
+}
+
+.intro h3{
+  font-size: 25px;
+  color: rgba(255, 255, 255, 0.9);
+  margin-bottom: 0;
+}
 
   .arkscontainer{
+    border-radius: 10px;
     max-width: 1540px;
     max-height: 1260px;
     margin-right: auto;
@@ -53,6 +77,7 @@ html{
   }
   
   .nav2_list{
+    border-radius: 10px;
     width:100%;
     box-shadow: 0 1px 1px 0px;
     background-color: #202122;
@@ -93,6 +118,7 @@ html{
 
   .nav2_list_item:hover{
     background-color:  #6869b6;
+    border-radius: 10px;
   }
   
   .mainpic2 img{
@@ -110,7 +136,7 @@ html{
   .mainpic2{
     display:flex;
     flex-shrink: 0;
-    padding-top: 150px;
+    padding-top: 30px;
   
   }
   
@@ -145,7 +171,7 @@ html{
     color: #d1cbd4;
     position:absolute;
     bottom: 0;
-    left: 5px;
+    left: 0px;
     height: 30%;
     width: 100%;
     padding: 10px;
@@ -153,3 +179,18 @@ html{
     pointer-events: none;
     border-radius: 3.5%;
   }
+
+  .footer{
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(34, 34, 34);
+    height: 100px;
+    margin: 0px 31px;
+}
+
+.footer p{
+    color: rgb(205, 210, 206);
+    font-size: 0.8rem;
+}
