--- a/css/css2/arknights.css
+++ b/css/css2/arknights.css
@@ -7,6 +7,11 @@
   }
 }
 
+.desktop{display:block}
+.mobile{display:none}
+
+
+
 html{
     background-image: url('../../imgs/img2/arknightsbackground.jpg');
     animation-name: anime;
@@ -40,21 +45,20 @@ html{
 } 
 
 .intro h2{
-    font-size: 50px;
+    font-size: 4vw;
     color: rgba(250, 250, 250, 0.9);
     margin-bottom: 0;
 }
 
 .intro h3{
-  font-size: 25px;
+  font-size: 2.25vw;
   color: rgba(255, 255, 255, 0.9);
   margin-bottom: 0;
 }
 
   .arkscontainer{
     border-radius: 10px;
-    max-width: 1540px;
-    max-height: 1260px;
+    
     margin-right: auto;
     margin-left: auto;
 
@@ -97,7 +101,7 @@ html{
     padding: 0 30px;
     font-family: Arial;
     font-weight: bold;
-    font-size: 24px;
+    font-size: 2vw;
     font-weight: 1000;
     text-decoration: none;
     color: #e9e7ee;
@@ -107,7 +111,6 @@ html{
   .nav2_list_item{
     display: flex;
     width:156%;
-    color:aliceblue;
     justify-content: center;
     align-items: center;
     list-style: none;
@@ -122,7 +125,7 @@ html{
   }
   
   .mainpic2 img{
-    width: 100%;
+    width: 700px;
     display: block;
     transition: 0.4s;
     border-radius: 3%;
@@ -143,7 +146,6 @@ html{
   .row2{
     display: flex;
     flex-wrap: wrap;
-    
   }
   
   .col2{
@@ -194,3 +196,60 @@ html{
     color: rgb(205, 210, 206);
     font-size: 0.8rem;
 }
+
+@media (max-width:768px){
+
+  .nav2_list_link{
+    font-size:2.6vw;
+  }
+
+  .intro{
+     margin-bottom:10px ;
+     margin-top:-100px ;
+  }
+
+  .row2{
+    flex-direction: column;
+    align-items: center;
+  }
+  .col2{
+    padding-top: 20px;
+    padding-left: 0px;
+    padding-right: 300px;
+    width: 85%;
+  
+  }
+  .mainpic2 img{
+    width:200%;
+    align-items: center;
+  }
+
+  .mainpic2 img:hover{
+      margin:auto;
+      width:210%;
+  }
+ 
+  .overlay{
+    margin:auto;
+  }
+
+
+}
+
+@media (max-width:320px){
+  
+    .desktop{display:none}
+    .mobile{display:block}  
+     
+    .nav2{
+      width:95%;
+    }
+    .nav2_list{
+      flex-wrap:wrap;
+     }
+     .nav2_list_link{
+      width:45%;
+    }
+
+    
+   }
