--- a/css/css2/operator.css
+++ b/css/css2/operator.css
@@ -145,9 +145,11 @@
 
   .operator_item_link:hover {
     background-color:  #6869b6;
-    border-radius: 10px;
-    font-size: 45px;
+    font-size:20px;
+    transition: 0.2s linear;
+    border-radius: 5px;
   }
+
   
   .operator_item_link:active  {
     background-color:  #35356e;
@@ -168,28 +170,28 @@
 
   .operator_container{
     display:flex;
-    flex-shrink: 0;
     padding-top: 40px;
-    margin-top: -200px;
+    /* margin-top: -200px; */
     margin-left: 5vw;
   }
   
   .row2{
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
+    /* width:100%; */
   }
 
   .col2{
-    padding-top: 20px;
+    /* padding-top: 20px;
     padding-left: 15px;
-    padding-right: 15px;
+    padding-right: 15px; */
     
   }
   
   .operator1_content{
     list-style: none;
-    padding: 2vw 4vw 1vw;
-                
+    /* padding: 2vw 4vw 1vw; */
+     width:100%;          
   }
   
   .operator1_item_link{
@@ -199,6 +201,7 @@
     padding-bottom: 10px;   
     justify-content:center ;
     align-items: center;
+    
   }
   
   .overlay {
@@ -231,3 +234,123 @@
     color: rgb(205, 210, 206);
     font-size: 0.8rem;
 }
+
+@media (max-width:768px){
+
+  .nav2_list_link{
+    font-size:2.6vw;
+  }
+
+  .operator_list{
+    width:100vw;
+  }
+  .operator_item_link{
+    font-size:20px;
+  }
+  
+  .operator_item_link:hover {
+    font-size:20px;
+    transition: 0.2s linear;
+    border-radius: 5px;
+  }
+
+
+  .operator1_content {
+    display: inline-block;
+  }
+  .operator1_item_link{
+    padding-inline-start: 25px;                  
+    padding-bottom: 10px;   
+  }
+
+  .row2{
+    flex-direction: column;
+    align-items: center;
+    margin-left: -40px;
+    
+  }
+  .col2{
+    /* padding-top: 20px;
+    padding-left: 0px;
+    padding-right: 300px; */
+    width: 85%;
+  
+  }
+
+  .overlay{
+    margin-left:-7px;
+    width:15.6vw;
+  }
+
+
+}
+
+@media (max-width:480px){
+  
+    .desktop{display:none}
+    .mobile{display:block}  
+     
+    .nav2{
+      width:100%;
+      height:400px;
+    }
+    .nav2_list{
+      flex-wrap:wrap;
+     }
+
+    .nav2_list_item{
+      background-color:#202122;
+      border-radius: 1%;
+    }
+
+    .nav2_list_link{
+      font-size:30px;
+     }
+
+     .operator{
+      width:100%;
+      height:600px;  
+      
+     }
+
+     .operator_list{
+      margin-top: 250px;
+      flex-wrap:wrap;
+     
+    }
+    .operator_item_link{
+      font-size:20px;
+      
+    }
+    .operator_item_link:hover {
+      font-size:20px;
+      transition: 0.2s linear;
+      border-radius: 5px;
+    }
+
+    .row2{
+      flex-direction: column;
+      align-items: center;
+    }
+    .col2{
+      padding-top: 20px;
+      padding-left: 0px;
+      padding-right: 240px;
+      margin-left: 15px;
+      width: 100%;
+
+    
+    }
+
+    .footer{
+      border-radius: 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: rgb(34, 34, 34);
+      height: 100px;
+      margin: 10px 31px;
+      width:83%;
+  }
+
+   }
