--- a/css/css/style.css
+++ b/css/css/style.css
@@ -15,8 +15,6 @@ html{
   animation-fill-mode: forwards;
   background-attachment: fixed;
   box-sizing:border-box;
-  height:100vh;
-  width: 100vw;
 
 }
 
@@ -24,15 +22,14 @@ html{
   box-sizing: border-box;
   text-decoration: none;
 }
-::-webkit-scrollbar{
 
-
+::-webkit-scrollbar {
   display: none;
 }
 
 .container{
   max-width: 1540px;
-  max-height: 1360px;
+  max-height: 1560px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -44,9 +41,9 @@ html{
 
 .header_title{
   line-height: 36px;
-  font-weight:1000;
-  font-family:Arial Black;
-  font-size:44px; 
+  font-weight: 1000;
+  font-family: Arial Black;
+  font-size: 44px; 
   font-weight: bold;
   color:#f0ecf3;
   padding-top: 30px;
@@ -57,6 +54,10 @@ html{
   display:flex;
   justify-content: center
   
+}
+
+.nav_menu {
+  display: none;
 }
 
 .nav_item {
@@ -90,7 +91,7 @@ html{
   width: 100%;
 }
 
-.nav_sublist_item {
+/* .nav_sublist_item {
   display: flex;
   justify-content: center;
   background-color: #f2c5e8;
@@ -103,8 +104,8 @@ html{
 
 .nav_sublist_item:hover {
   background-color: #aa2fcf;
-  /* color: #EDF2C5; */
-}
+  /* color: #EDF2C5; 
+} */
 
 .nav_list{
   width:100%;
@@ -147,6 +148,32 @@ html{
   text-decoration: none;
   color: #edf2c5;
 }
+
+/* @media screen and (max-width: 768px) {
+
+  .nav_list {
+    display: none;
+  }
+
+  
+
+} */
+
+/* @media screen and (max-width: 480px) {
+  
+  .nav_list {
+    display: none;
+  }
+
+  .nav_menu {
+    display: block;
+    color: white;
+  }
+
+  .header {
+    justify-content: left;
+  }
+} */
 
 .wrap{
   display: flex;
@@ -260,6 +287,23 @@ html{
   padding: 0;
 }
 
+/* @media screen and (max-width:768px) {
+  .row {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  
+
+  .col {
+    width: 80%;
+  }
+
+  .mainpic img {
+    height: 20%;
+  }
+} */
+
 footer {
   background: rgba(48, 47, 47, 0.9);
 }
@@ -277,11 +321,11 @@ footer {
 
 .follow{
   display:flex;
-  padding-left: 30px ;
+  padding-left: 30px;
   padding-top: 10px;
   margin: 0 100px;
   justify-content:space-around;
-  
+  align-items: center;
 }
 
 .follow a img{
