--- a/css/css2/arknights.css
+++ b/css/css2/arknights.css
@@ -167,6 +167,7 @@ html{
   }
 
   .overlay {
+    font-size: 40px;
     box-sizing: border-box;
     display: none;
     background: rgba(0, 0, 0, 0.65);
@@ -174,8 +175,8 @@ html{
     position:absolute;
     bottom: 0;
     left: 0px;
-    height: 30%;
-    width: 74%;
+    height: 50%;
+    width: 100%;
     padding: 10px;
     margin: 0 20px;
     pointer-events: none;
@@ -232,6 +233,7 @@ html{
   .overlay{
     margin:auto;
     width:81vw;
+    font-size: 30px;
   }
 
 
@@ -292,9 +294,18 @@ html{
     }
     
     .mainpic2 img{
-      width:370px;
+      width:400px;
     }
-   
+    
+    .mainpic2 img:hover {
+      width:100%;
+    }
+    .overlay{
+      margin:auto;
+      width:81vw;
+      font-size: 15px;
+    }
+
     .footer{
       border-radius: 10px;
       display: flex;
@@ -303,7 +314,7 @@ html{
       background-color: rgb(34, 34, 34);
       height: 100px;
       margin: 10px 31px;
-      width:84%;
+      width:85%;
   }
 
    }
