--- a/css/css2/arknights.css
+++ b/css/css2/arknights.css
@@ -175,10 +175,9 @@ html{
     position:absolute;
     bottom: 0;
     left: 0px;
-    height: 50%;
+    height: 55%;
     width: 100%;
-    padding: 10px;
-    margin: 0 20px;
+    margin: 0px 20px;
     pointer-events: none;
     border-radius: 3.5%;
   }
