--- a/css/css/screen.css
+++ b/css/css/screen.css
@@ -1,4 +1,6 @@
 @media (max-width: 768px) {
+
+
   .row {
     flex-direction: column;
     align-items: center;
@@ -16,7 +18,15 @@
     margin-top: 100px;
   }
 
-  @media (max-width: 480px) {
+  .follow img {
+    height: 10vh;
+    width: 14vw;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+
+  @media screen and (max-width: 480px) {
+
     .header {
       position: relative;
     }
@@ -30,9 +40,9 @@
       position: absolute;
       display: block;
       color: #eeebf0;
-      font-size: 1.8em;
+      font-size: 1.6em;
       right: 10px;
-      top: 60px;
+      top: 55px;
     }
 
     .nav_menu:hover {
@@ -40,16 +50,15 @@
       cursor: pointer;
     }
 
+
     .nav_list {
       position: absolute;
       top: 120px;
-      display: flex;
-      flex-wrap: wrap;
+      display: none;
       flex-direction: column;
-      justify-content: space-between;
-      background: rgba(42, 41, 41, 0.85);
+      background: rgba(42, 41, 41, 0.95);
       height: 40vh;
-      width: 100vh;
+      width: 100%;
       margin: 0;
       padding: 0;
     }
@@ -65,6 +74,7 @@
     .nav_list_item {
       display: flex;
       justify-content: center;
+      width: 100%;
       height: 25%;
       transition: 0.2s linear;
     }
@@ -161,12 +171,12 @@
       display: flex;
       justify-content: center;
       padding-top: 0 auto;
-      margin-left: 20px;
+      margin-left: 0;
     }
 
     .footer_title h1 {
       color: rgba(213, 207, 215, 0.8);
-      font-size: 32px;
+      font-size: 28px;
     }
 
     .follow {
@@ -177,8 +187,8 @@
     }
 
     .follow a img {
-      height: 60px;
-      width: 60px;
+      height: 10vw;
+      width: 12vw;
       margin-left: 5px;
       margin-right: 5px;
       transition-property: transform opacity;
