--- a/css/css/style.css
+++ b/css/css/style.css
@@ -27,6 +27,10 @@ html{
   display: none;
 }
 
+.show {
+  display: flex;
+}
+
 .container{
   max-width: 1540px;
   max-height: 1560px;
@@ -321,7 +325,6 @@ footer {
 
 .follow{
   display:flex;
-  padding-left: 30px;
   padding-top: 10px;
   margin: 0 100px;
   justify-content:space-around;
