--- a/css/css2/arknights.css
+++ b/css/css2/arknights.css
@@ -243,7 +243,15 @@ html{
     .desktop{display:none}
     .mobile{display:block}  
      
+    html{
+      background-image: url('../../imgs/img2/phone.jpg');
+      background-size: 700px;
+      background-position: -80px -200px;
+      
+    }
+
     .nav2{
+      margin-top: 0px;
       width:100%;
       height:400px;
     }
