--- a/css/css2/arknights.css
+++ b/css/css2/arknights.css
@@ -294,6 +294,7 @@ html{
       padding-top: 20px;
       padding-left: 0px;
       margin-left: 15px;
+      padding-right: 0px;
       width: 100%;
 
     
