--- a/css/css/screen.css
+++ b/css/css/screen.css
@@ -14,6 +14,22 @@
     height: 20%;
   }
 
+  .overlay {
+    height: 50%;
+  }
+  
+  .overlay:hover {
+    margin: 0 25px;
+  }
+
+  .overlay h2 {
+    font-size: 24px;
+  }
+
+  .overlay p {
+    font-size: 18px;
+  }
+
   .footer {
     margin-top: 100px;
   }
@@ -165,6 +181,22 @@
     .mainpic img:hover {
       opacity: 0.8;
       margin: 0 25px;
+    }
+
+    .overlay {
+      height: 50%;
+    }
+    
+    .overlay:hover {
+      margin: 0 25px;
+    }
+
+    .overlay h2 {
+      font-size: 18px;
+    }
+
+    .overlay p {
+      font-size: 14px;
     }
 
     .footer_title {
